# DaceDSX

./: LICENSE  README.md
AvroSchemas/: SyncMsg.avsc  (+3 more)
CppBaseWrapper/: CMakeLists.txt
CppBaseWrapper/src/api/: Interaction.h  Provision.h
CppBaseWrapper/src/api/Traffic/Micro/: InteractionTrafficMicro.h  Orchestration.h  ProvisionHandlerTrafficMicro.cpp  ProvisionHandlerTrafficMicro.h  ProvisionTrafficMicro.h
CppBaseWrapper/src/communication/: AvroHelper.cpp  AvroHelper.h  ConsumedMessage.h  Consumer.cpp  Consumer.h  EchoHandler.h  InteractionHandler.cpp  InteractionHandler.h  InteractionHandlerTrafficMicro.cpp  InteractionHandlerTrafficMicro.h  LogHandler.cpp  LogHandler.h  MessageHandler.cpp  MessageHandler.h  OrchestrationHandler.cpp  OrchestrationHandler.h  Producer.cpp  Producer.h  ProvisionHandler.cpp  ProvisionHandler.h  ProvisionHandlerTrafficMicro.cpp  ProvisionHandlerTrafficMicro.h  TimeSyncHandler.cpp  TimeSyncHandler.h
CppBaseWrapper/src/communication/kafka/: KafkaConsumer.cpp  KafkaConsumer.h  KafkaConsumerCallback.h  KafkaProducer.cpp  KafkaProducer.h
CppBaseWrapper/src/datamodel/: BB.hh  CtrlMsg.hh  InteractionMsg.hh  Macro.hh  Meso.hh  MicroDetector.hh  MicroEdge.hh  Observer.hh  Projector.hh  ResourceFile.hh  Scenario.hh  StatusMsg.hh  SubMicro.hh  SyncMsg.hh  Translator.hh  Vec3.hh
CppBaseWrapper/src/logic/: Observer.h  SimulationControl.cpp  SimulationControl.h  TimeSync.cpp  TimeSync.h
CppBaseWrapper/src/main/: SimulationWrapper.cpp  SimulationWrapper.h
CppBaseWrapper/src/util/: Config.cpp  Config.h  Defines.h  Utils.cpp  Utils.h  log.h
(+83 files in other folders)
